dodano funckje od zarzadzania zarzadznia tabela ora funzkje insert sort

--- a/AiSD_Project/AiSD_Project/AiSD_Project.vcxproj
+++ b/AiSD_Project/AiSD_Project/AiSD_Project.vcxproj
@@ -139,7 +139,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="array_handle.c" />
     <ClCompile Include="main.c" />
+    <ClCompile Include="sort_algorithms.c" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="sort_project.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
