dodano stepna wersje gui

--- a/AiSD_Project/AiSD_Project/AiSD_Project.vcxproj.filters
+++ b/AiSD_Project/AiSD_Project/AiSD_Project.vcxproj.filters
@@ -27,10 +27,16 @@
     <ClCompile Include="data_gather.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="gui.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="sort_project.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
 </Project>
