--- a/AiSD_Project/AiSD_Project/AiSD_Project.vcxproj
+++ b/AiSD_Project/AiSD_Project/AiSD_Project.vcxproj
@@ -153,10 +153,17 @@
     <ClCompile Include="sort_algorithms.c" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="resource.h" />
     <ClInclude Include="sort_project.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="Resource.rc" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="icon.ico" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
